--- a/shopdemo/src/assets/css/base.css
+++ b/shopdemo/src/assets/css/base.css
@@ -47,7 +47,7 @@ input,
 select,
 textarea {
   -webkit-appearance: none;
-  font-size: 14px;
+  font-size: .14rem;
   outline: none;
   color: #333;
   font-family: Helvetica, "Helvetica Neue", STHeiTi, sans-serif;
@@ -57,6 +57,7 @@ body {
   line-height: .24rem;
   color: #333;
   background: #f6f6f6;
+  cursor: pointer;
 }
 .alic {
   text-align: center;
@@ -564,4 +565,156 @@ textarea::-webkit-input-placeholder {
   position: relative;
   z-index: 2;
   background: #fff;
+}
+.arr-ra:after {
+  content: "";
+  display: block;
+  position: absolute;
+  right: 16px;
+  top: 50%;
+  height: 8px;
+  width: 8px;
+  border-top: 1px solid #aaa;
+  border-right: 1px solid #aaa;
+  -webkit-transform: translateY(-50%) rotate(45deg);
+  transform: translateY(-50%) rotate(45deg);
+}
+.arr-ra.l0:after {
+  right: 0;
+}
+.editlinebox {
+  margin-top: .1rem;
+  background: #fff;
+}
+.editlinebox-nmt {
+  margin-top: 0;
+}
+.editlinebox-npl {
+  padding-left: 0;
+}
+.editlinebox .editline {
+  display: block;
+  padding-left: .8rem;
+  border-bottom: 1px solid #eee;
+  position: relative;
+}
+.editlinebox .editline:nth-last-child(1) {
+  border-bottom: none;
+}
+.editlinebox .editline-nbd {
+  border-bottom: none;
+}
+.editlinebox .editline-full {
+  padding-left: 0;
+}
+.editlinebox .editline-select {
+  padding-right: .14rem;
+}
+.editlinebox .editline-select:after {
+  content: "";
+  display: block;
+  position: absolute;
+  right: 16px;
+  top: 50%;
+  height: 8px;
+  width: 8px;
+  border-top: 1px solid #aaa;
+  border-right: 1px solid #aaa;
+  -webkit-transform: translateY(-50%) rotate(45deg);
+  transform: translateY(-50%) rotate(45deg);
+}
+.editlinebox .editline-cover:before {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 3;
+  height: 100%;
+  width: 100%;
+}
+.editlinebox .el-ado {
+  position: absolute;
+  left: 0;
+  top: 0;
+  padding-left: .14rem;
+  line-height: .44rem;
+  color: #333;
+}
+.editlinebox .el-ado-l14 {
+  left: 14px;
+}
+.editlinebox .el-ado-m {
+  top: 50%;
+  margin-top: -0.22rem;
+}
+.editlinebox .el-ado-line {
+  position: relative;
+}
+.editlinebox .el-head {
+  position: relative;
+  height: .44rem;
+}
+.editlinebox .el-head .el-ctrol {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 2;
+  opacity: 0;
+}
+.editlinebox .el-head .el-headimg {
+  position: absolute;
+  right: .14rem;
+  top: 50%;
+  z-index: 1;
+  transform: translateY(-50%);
+  height: .4rem;
+  width: .4rem;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.editlinebox .el-input {
+  padding-right: .14rem;
+}
+.editlinebox .el-ctrol {
+  display: block;
+  width: 100%;
+  border: none;
+  outline: none;
+  background: #fff;
+  height: .44rem;
+  text-align: right;
+  color: #333;
+}
+.editlinebox .el-textarea {
+  padding: 0 .14rem .05rem;
+}
+.editlinebox .el-ctrol-area {
+  display: block;
+  width: 100%;
+  border: none;
+  outline: none;
+  background: #fff;
+  height: .8rem;
+  color: #333;
+  text-align: left;
+}
+.editlinebox .el-ctrol-sel {
+  direction: rtl;
+}
+.editlinebox-50 .el-ado {
+  line-height: .5rem;
+  font-size: .15rem;
+}
+.editlinebox-50 .el-ado-m {
+  margin-top: -0.25rem;
+}
+.editlinebox-50 .el-ctrol {
+  height: .5rem;
+  font-size: .15rem;
+}
+.editlinebox-50 .el-head {
+  height: .5rem;
 }
