--- a/shopdemo/src/assets/css/base.less
+++ b/shopdemo/src/assets/css/base.less
@@ -5,7 +5,7 @@ img { border: 0;display: inline-block; max-width: 100%; vertical-align: middle;}
 a{ text-decoration:none; color: #222;}
 ul{ list-style: none; }
 dl,ul,p{ -webkit-margin-before:0em; -webkit-margin-after:0em;}
-input,select,textarea{-webkit-appearance: none; font-size: 14px; outline: none; color: #333; font-family:Helvetica, "Helvetica Neue",  STHeiTi, sans-serif;}
+input,select,textarea{-webkit-appearance: none; font-size: .14rem; outline: none; color: #333; font-family:Helvetica, "Helvetica Neue",  STHeiTi, sans-serif;}
 body{ font-size: .14rem; line-height: .24rem; color: #333; background: #f6f6f6; cursor: pointer; }
 .alic{ text-align: center;}
 .alir{ text-align: right;}
@@ -123,3 +123,38 @@ textarea::-webkit-input-placeholder { color: #ccc;}
     .right{ position: absolute; right: 0; top: 0; height: 100%; display: flex; display: -webkit-flex; background: red;;}
     .wrap{ position: relative; z-index: 2; background: #fff;}
 }
+
+.arr-ra:after{ content: ""; display: block; position: absolute; right: 16px; top: 50%; height: 8px; width: 8px; border-top: 1px solid #aaa; border-right: 1px solid #aaa; -webkit-transform: translateY(-50%) rotate(45deg);transform: translateY(-50%) rotate(45deg); }
+.arr-ra.l0:after{ right: 0;}
+
+.editlinebox{ margin-top: .1rem; background: #fff;}
+.editlinebox-nmt{ margin-top: 0;}
+.editlinebox-npl{ padding-left: 0;}
+.editlinebox .editline{ position: relative; display: block; padding-left: .8rem; border-bottom: 1px solid #eee; position: relative;}
+.editlinebox .editline:nth-last-child(1){ border-bottom: none;}
+.editlinebox .editline-nbd{ border-bottom: none;}
+.editlinebox .editline-full{padding-left: 0;}
+.editlinebox .editline-select{ padding-right: .14rem;}
+.editlinebox .editline-select:after{ content: ""; display: block; position: absolute; right: 16px; top: 50%; height: 8px; width: 8px; border-top: 1px solid #aaa; border-right: 1px solid #aaa; -webkit-transform: translateY(-50%) rotate(45deg);transform: translateY(-50%) rotate(45deg); }
+.editlinebox .editline-cover:before{ content: ""; display: block; position: absolute; left: 0; top: 0; z-index: 3; height: 100%; width: 100%; }
+.editlinebox .el-ado{position: absolute; left: 0; top: 0; padding-left: .14rem; line-height: .44rem; color: #333;}
+.editlinebox .el-ado-l14{ left: 14px;}
+.editlinebox .el-ado-m{ top: 50%; margin-top: -.22rem; }
+.editlinebox .el-ado-line{position: relative;}
+.editlinebox .el-head{ position: relative; height: .44rem;}
+.editlinebox .el-head .el-ctrol{position: absolute; left: 0; top: 0; right: 0; bottom: 0; z-index: 2; opacity: 0;}
+.editlinebox .el-head .el-headimg{ position: absolute; right: .14rem; top: 50%; z-index: 1; transform: translateY(-50%); height: .4rem; width: .4rem; border-radius: 50%; overflow: hidden;}
+// .editlinebox .el-text{text-align: right; padding: 12px 14px 12px 0; color: #333; line-height: 20px; display: block;}
+// .editlinebox .el-text-dis{color: #ccc;}
+// .editlinebox .editline-full .el-text{ padding-left: 14px; text-align: left;}
+// .editlinebox .editline-full .el-text-full{ padding-left: 0;}
+// .editlinebox .el-textarea{ padding: 0 14px 10px 0;}
+.editlinebox .el-input{ padding-right: .14rem;}
+.editlinebox .el-ctrol{ display: block; width: 100%; border:none; outline: none; background: #fff; height: .44rem; text-align: right; color: #333;}
+.editlinebox .el-textarea{ padding: 0 .14rem .05rem;}
+.editlinebox .el-ctrol-area{display: block; width: 100%; border:none; outline: none; background: #fff; height: .8rem; color: #333; text-align: left;}
+.editlinebox .el-ctrol-sel{direction: rtl;}
+.editlinebox-50 .el-ado{ line-height: .5rem; font-size: .15rem;}
+.editlinebox-50 .el-ado-m{  margin-top: -.25rem; }
+.editlinebox-50 .el-ctrol{ height: .5rem; font-size: .15rem;}
+.editlinebox-50 .el-head{ height: .5rem;}
