--- a/shopdemo/src/assets/css/base.less
+++ b/shopdemo/src/assets/css/base.less
@@ -144,11 +144,12 @@ textarea::-webkit-input-placeholder { color: #ccc;}
 .editlinebox .el-head{ position: relative; height: .44rem;}
 .editlinebox .el-head .el-ctrol{position: absolute; left: 0; top: 0; right: 0; bottom: 0; z-index: 2; opacity: 0;}
 .editlinebox .el-head .el-headimg{ position: absolute; right: .14rem; top: 50%; z-index: 1; transform: translateY(-50%); height: .4rem; width: .4rem; border-radius: 50%; overflow: hidden;}
-// .editlinebox .el-text{text-align: right; padding: 12px 14px 12px 0; color: #333; line-height: 20px; display: block;}
-// .editlinebox .el-text-dis{color: #ccc;}
-// .editlinebox .editline-full .el-text{ padding-left: 14px; text-align: left;}
-// .editlinebox .editline-full .el-text-full{ padding-left: 0;}
-// .editlinebox .el-textarea{ padding: 0 14px 10px 0;}
+.editlinebox .el-text{text-align: right; padding: .12rem .14rem .12rem 0; color: #333; line-height: .2rem; display: block;}
+.editlinebox .el-text.l{ text-align: left;}
+.editlinebox .el-text-dis{color: #ccc;}
+.editlinebox .editline-full .el-text{ padding-left: .14rem; text-align: left;}
+.editlinebox .editline-full .el-text-full{ padding-left: 0;}
+.editlinebox .el-textarea{ padding: 0 .14rem .1rem 0;}
 .editlinebox .el-input{ padding-right: .14rem;}
 .editlinebox .el-ctrol{ display: block; width: 100%; border:none; outline: none; background: #fff; height: .44rem; text-align: right; color: #333;}
 .editlinebox .el-textarea{ padding: 0 .14rem .05rem;}
@@ -158,3 +159,12 @@ textarea::-webkit-input-placeholder { color: #ccc;}
 .editlinebox-50 .el-ado-m{  margin-top: -.25rem; }
 .editlinebox-50 .el-ctrol{ height: .5rem; font-size: .15rem;}
 .editlinebox-50 .el-head{ height: .5rem;}
+.editlinebox-50 .el-text{padding: .15rem .14rem .15rem 0;}
+.editlinebox-sm .editline{ padding-left: .5rem;}
+.editlinebox-sm .el-ado{ color: #999;}
+.editlinebox-bl0.editlinebox{ padding-left: .14rem;}
+.editlinebox-bl0.editlinebox .el-ado{ padding-left: 0;}
+.editlinebox-bl0.editlinebox .editline{ padding-left: .64rem;}
+.editlinebox-bl0.editlinebox-sm .editline{ padding-left: .36rem;}
+
+.flex{display: flex; display: -webkit-flex;}
