--- a/shopdemo/src/assets/css/base.less
+++ b/shopdemo/src/assets/css/base.less
@@ -23,6 +23,8 @@ body{ font-size: .14rem; line-height: .24rem; color: #333; background: #f6f6f6; 
 .fwb{ font-weight: bold;}
 .ptr{ position: relative;}
 .html{ width: 100%; margin: 0 auto; position: relative; z-index: 1;min-height: 100%;}
+.cff{ color: #fff;}
+.c{ color: #ff6521;}
 
 input::-webkit-input-placeholder { color: #ccc;}
 textarea::-webkit-input-placeholder { color: #ccc;}
@@ -110,6 +112,9 @@ textarea::-webkit-input-placeholder { color: #ccc;}
     .pl-btnb{ background: #c5c5c5;}
     .pl-cover{ position: absolute; z-index: 2; left: 0; top: 0; bottom: 0; right: 0; background: rgba(255,255,255,.7);}
     .pl-cover-tx{position: absolute; z-index: 2; left: .15rem; top: .15rem;  height: 1rem; width: 1rem; background: rgba(0,0,0,.4); border-radius: 50%; line-height: 1rem; font-size: .24rem; text-align: center; color: #fff; }
+    .pl-sper{ position: relative; height: .16rem; width: .7rem; margin-top: .08rem;line-height: .14rem; border:1px solid #ff6521;border-radius: .09rem;}
+    .pl-sperin{ position: absolute; left: 0; top: 0; height: .16rem; background: #ff6521; border-radius: .09rem;}
+    .pl-sper-tx{ position: relative; z-index: 2; display: block; padding: 0 .05rem; font-size: .1rem; white-space: nowrap;}
 }
 
 .cm-oico{
