--- a/shopdemo/src/components/calendar/index.less
+++ b/shopdemo/src/components/calendar/index.less
@@ -5,7 +5,7 @@
     .cc-top{ display: flex; display: -webkit-flex; line-height: 40px; text-align: center;}
     .cc-tl{ width: 30%; display: flex; display: -webkit-flex; align-items: center; justify-content: center; }
     .cc-ttime{ width: 40%; font-size: 18px;}
-    .cc-mid{display: flex; display: -webkit-flex; text-align: center; background: #f4f4f4; line-height: 30px;}
+    .cc-mid{display: flex; display: -webkit-flex; text-align: center; background: #f4f4f4; line-height: 30px; color: #888;}
     .cols{ width: 14.2%;}
     .cols:nth-child(7n){ width: 14.8%;}
     .cc-table{display: flex; display: -webkit-flex; flex-wrap: wrap; text-align: center; line-height: 40px; font-size: 16px;}
