--- a/shopdemo/src/assets/css/base.less
+++ b/shopdemo/src/assets/css/base.less
@@ -79,9 +79,10 @@ textarea::-webkit-input-placeholder { color: #ccc;}
     .tl-title{ font-size: .13rem; line-height: .18rem; min-height: .36rem; display: -webkit-box; -webkit-box-orient:vertical;-webkit-line-clamp:2; text-overflow:ellipsis; overflow:hidden;}
     .tl-price{ padding-top: .05rem; font-size: .16rem; color: #ff6521;}
     .tl-pun{ margin-right: .03rem; font-size: .12rem;}
-    .tl-info{ padding: .1rem; background: #fff; border:1px solid #e5e5e5; border-top: none;}
+    .tl-info{ position: relative; padding: .1rem; background: #fff; border:1px solid #e5e5e5; border-top: none;}
     .tl-new{ position: absolute; left: .1rem; top: 0; z-index: 1; width: .27rem;}
     .tl-imgo{ position: relative;}
+    .pl-btime{ position: absolute; left: 0; bottom: 0; right: 0; padding: 0 .05rem; background: #ff6521; color: #fff; font-size: .1rem;}
     &.lthree{
         padding: 0 0 0 .15rem;
         .tl-item{ width: 1.08rem; margin-right: .1rem;}
