--- a/shopdemo/src/assets/css/base.less
+++ b/shopdemo/src/assets/css/base.less
@@ -7,6 +7,7 @@ ul{ list-style: none; }
 dl,ul,p{ -webkit-margin-before:0em; -webkit-margin-after:0em;}
 input,select,textarea{-webkit-appearance: none; font-size: .14rem; outline: none; color: #333; font-family:Helvetica, "Helvetica Neue",  STHeiTi, sans-serif;}
 body{ font-size: .14rem; line-height: .24rem; color: #333; background: #f6f6f6; cursor: pointer; }
+html,body{ height: 100%; }
 .alic{ text-align: center;}
 .alir{ text-align: right;}
 .ovh{ overflow: hidden;}
