--- a/shopdemo/src/assets/css/base.less
+++ b/shopdemo/src/assets/css/base.less
@@ -175,3 +175,5 @@ textarea::-webkit-input-placeholder { color: #ccc;}
 .editlinebox-bl0.editlinebox-sm .editline{ padding-left: .36rem;}
 
 .flex{display: flex; display: -webkit-flex;}
+
+.cm-overtouch{ position: fixed; z-index: 5; top: 0; left: 0;}
