--- a/shopdemo/src/assets/css/base.less
+++ b/shopdemo/src/assets/css/base.less
@@ -175,5 +175,15 @@ textarea::-webkit-input-placeholder { color: #ccc;}
 .editlinebox-bl0.editlinebox-sm .editline{ padding-left: .36rem;}
 
 .flex{display: flex; display: -webkit-flex;}
+.flex-center{justify-content: center; align-items: center;}
 
 .cm-overtouch{ position: fixed; z-index: 5; top: 0; left: 0;}
+
+.ot{ 
+    left:auto; right: .1rem; top: 50%;
+    .otitem{ display: block; margin: .05rem 0; background: rgba(0,0,0,.2); line-height: .2rem; border-radius: .05rem; color: #fff; font-size: .1rem;}
+    .otls{ text-align: center; width: .6rem; padding: 1px 0;}
+    .otitem-ac{ background: rgba(0,0,0,.6);}
+}
+
+    
