--- a/shopdemo/src/assets/css/base.less
+++ b/shopdemo/src/assets/css/base.less
@@ -39,6 +39,11 @@ textarea::-webkit-input-placeholder { color: #ccc;}
 .flex-between{justify-content:space-between;}
 .bdtb{ border-top: 1px solid #eee; border-bottom: 1px solid #eee;}
 
+.cm-btn{ background: #fff; border:1px solid #eee; line-height: .38rem; padding: 0 .2rem;}
+.cm-btn.rd{ border-radius: .2rem;}
+.cm-btn.small{ line-height: .28rem; padding: 0 .12rem; font-size: .12rem;}
+.cm-btn.small.rd{ border-radius: .16rem;}
+
 .cm-pop{ position: fixed; left: 0; top: 0; height: 0; overflow: hidden; width: 100%; background: rgba(0,0,0,0.5); z-index: 10; opacity: 0;}
 .cm-popz20{ z-index: 20;}
 .cm-pop-active{ opacity: 1; height: 100%;}
@@ -190,9 +195,9 @@ textarea::-webkit-input-placeholder { color: #ccc;}
 
 .ot{ 
     left:auto; right: .1rem; top: 50%;
-    .otitem{ display: block; margin: .05rem 0; background: rgba(0,0,0,.2); line-height: .2rem; border-radius: .05rem; color: #fff; font-size: .1rem;}
+    .otitem{ display: block; margin: .05rem 0; background: rgba(0,0,0,.4); line-height: .2rem; border-radius: .05rem; color: #fff; font-size: .1rem;}
     .otls{ text-align: center; width: .6rem; padding: 1px 0;}
-    .otitem-ac{ background: rgba(0,0,0,.6);}
+    .otitem-ac{ background: rgba(0,0,0,.8);}
 }
 
 .cm-tabbox{ height: .44rem; line-height: .44rem; border-bottom: 1px solid #eee; background: #fff; text-align: center; font-size: .16rem;}
