--- a/shopdemo/src/assets/css/base.less
+++ b/shopdemo/src/assets/css/base.less
@@ -214,3 +214,9 @@ textarea::-webkit-input-placeholder { color: #ccc;}
 .cm-tabbox-x{ overflow-x: scroll; -webkit-overflow-scrolling: touch; white-space: nowrap; overflow-y: hidden;}
 .cm-tabbox-x .cmtab{ display: inline-block; width: auto; float:none; padding: 0 .1rem;}
     
+
+.cm-empty{
+    padding-top: 1rem; text-align: center;
+    .eimg{ display: block; margin: 0 auto; width: 1.6rem;}
+    .etx{ font-size: .12rem; color: #666; padding-top: .1rem;}
+}
