--- a/shopdemo/src/assets/css/base.css
+++ b/shopdemo/src/assets/css/base.css
@@ -139,6 +139,9 @@ input::-webkit-input-placeholder {
 textarea::-webkit-input-placeholder {
   color: #ccc;
 }
+.arr-ra {
+  position: relative;
+}
 .arr-ra:after {
   content: "";
   display: block;
@@ -171,8 +174,10 @@ textarea::-webkit-input-placeholder {
   border-bottom: 1px solid #eee;
 }
 .cm-btn {
+  display: block;
   background: #fff;
   border: 1px solid #eee;
+  text-align: center;
   line-height: 0.38rem;
   padding: 0 0.2rem;
 }
